--- a/app/src/main/res/layout/view_radio_cell.xml
+++ b/app/src/main/res/layout/view_radio_cell.xml
@@ -48,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginStart="16dp"
-        android:background="#C4C4C4"
+        android:background="@color/border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
